updating the datatype for the pdf. Now utilizing code to extract the sum of gaussians, not scanning data points any more. The parameters are stored in a vector {mean, width, area}. Should be array<float, 3>, but that doesn't have proper ROOT dicts. Also updating the plotting code for the pdfs

--- a/top/modules/TOPReconstruction_PDF/SConscript
+++ b/top/modules/TOPReconstruction_PDF/SConscript
@@ -4,4 +4,7 @@ env['LIBS'] = ['framework', 'top_dataobjects', 'mdst_dataobjects',
                'tracking_dataobjects', 'top_reconstruction', 
                '$ROOT_LIBS', 'gfortran']
 
+env.Append(CCFLAGS = ['-g'])
+
 Return('env')
+
