--- a/reconstruction/SConscript
+++ b/reconstruction/SConscript
@@ -1,3 +1,3 @@
 Import('env')
-env['LIBS'] = ['$ROOT_LIBS', 'calibration', 'calibration_dataobjects', 'cdc_dataobjects', 'framework', 'reconstruction_dbobjects']
+env['LIBS'] = ['$ROOT_LIBS', 'calibration', 'calibration_dataobjects', 'framework', 'reconstruction_dbobjects']
 Return('env')
