--- a/analysis/dataobjects/SConscript
+++ b/analysis/dataobjects/SConscript
@@ -1,5 +1,5 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'mdst_dataobjects', '$ROOT_LIBS', 'EG']
+env['LIBS'] = ['framework', 'mdst_dataobjects', 'analysis_ClusterUtility', '$ROOT_LIBS', 'EG']
 
 Return('env')
