--- a/ecl/modules/eclClusterAnalysis/SConscript
+++ b/ecl/modules/eclClusterAnalysis/SConscript
@@ -1,4 +1,4 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'mdst_dataobjects', 'CLHEP']
+env['LIBS'] = ['framework', 'mdst_dataobjects', 'CLHEP', 'analysis_ClusterUtility']
 Return('env')
