--- a/daq/slc/data/config/slowcontrol.conf
+++ b/daq/slc/data/config/slowcontrol.conf
@@ -3,8 +3,8 @@
 # NSM configuration
 #
 
-nsm.host           : ${HOSTNAME}
-nsm.port           : 9122
+nsm.host           : storage
+nsm.port           : 9120
 #nsm.global.host    : disk
 #nsm.global.port    : 8122
 nsm.data.incpath   : ${BELLE2_LOCAL_DIR}/daq/slc/data/nsm
@@ -14,7 +14,8 @@ nsm.data.incpath   : ${BELLE2_LOCAL_DIR}/daq/slc/data/nsm
 #
 
 database.use       : false
-database.host      : b2db.daqnet.kek.jp
+#database.host      : b2db.b2nsm.kek.jp
+database.host      : localhost
 database.port      : 5432
 database.dbname    : b2slow
 database.user      : b2daq
