--- a/ecl/modules/eclDisplay/SConscript
+++ b/ecl/modules/eclDisplay/SConscript
@@ -1,5 +1,12 @@
 Import('env')
 
-env['LIBS'] = ['Core',  'GX11',  'Graf3d', 'Gui', '$ROOT_LIBS', 'rawdata_dataobjects', 'framework']
+#env['LIBS'] = ['Core',  'GX11',  'Graf3d', 'Gui', 'RGL',
+#               '$ROOT_LIBS', 'ecl_dataobjects', 'rawdata_dataobjects',
+#               'mdst_dataobjects', 'simulation_dataobjects', 'ecl',
+#               'framework']
+env['LIBS'] = ['Core', '$ROOT_LIBS', 'Gui', 'ecl_dataobjects', 'rawdata_dataobjects',
+               'mdst_dataobjects', 'simulation_dataobjects', 'ecl',
+               'framework']
+#env['LIBS'] += env['TEVE_LIBS']
 
 Return('env')
